--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ name: app_environment
 channels:
   - snowflake
 dependencies:
-  - python=3.11.*
-  - snowflake-snowpark-python=
-  - streamlit=
+  - python= 3.10.19
+  - snowflake-snowpark-python= 1.9.0
+  - streamlit=1.51.0
