--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-name: app_environment
-channels:
-  - snowflake
-dependencies:
-  - python= 3.10.19
-  - snowflake-snowpark-python= 1.9.0
-  - streamlit=1.51.0
+snowflake-snowpark-python
+streamlit
